--- a/sound/songs/midi/midi.cfg
+++ b/sound/songs/midi/midi.cfg
@@ -208,6 +208,10 @@ mus_vs_rival.mid:              -E -R50 -G124 -V080 -P1
 mus_vs_trainer.mid:            -E -R50 -G119 -V080 -P1
 mus_vs_wild.mid:               -E -R50 -G117 -V080 -P1
 mus_weather_groudon.mid:       -E -R50 -G090 -V050
+
+mus_downstream.mid:           -E -R50 -G191 -V100 -P1
+
+
 ph_choice_blend.mid:           -E -G130 -P4
 ph_choice_held.mid:            -E -G130 -P4
 ph_choice_solo.mid:            -E -G130 -P4
